# multi-layer-perceptron

./: CMakeLists.txt  README.md
.cache/clangd/index/: DataLoader.cpp.5AB78497285146CC.idx  DataLoader.h.719C1D6FD5A92DE8.idx  DenseLayer.cpp.475AD28FC6FA1094.idx  DenseLayer.h.6B21E99287E2DE07.idx  Matrix.cpp.2BCD512F4859A042.idx  Matrix.h.5ACB69E298A2B452.idx  NeuralNet.cpp.37227284B6A3CB0D.idx  NeuralNet.h.FB2243E6CB1CFC74.idx  main.cpp.58A64CA56FE3CCD0.idx
apps/: main.cpp
include/: CImg.h
include/SimpleLearning/: DataLoader.h  DenseLayer.h  NeuralNet.h
src/: DataLoader.cpp  DenseLayer.cpp  NeuralNet.cpp
